# jepa-t-cells

./: .gitignore  EXPERIMENT_1_REPORT.md  EXPERIMENT_2_REPORT.md  EXPERIMENT_2_REPORT_135k.md  JEPA-implementation-report.md  PROJECT_NARRATIVE.md  README.md  Untitled  benchmarking.md  experiment_2_implementation_plan.md  experiment_2_preparation.md  experiment_3_implementation_plan.md  ood_compression_diagnostic.md  pyproject.toml  requirements.txt  task5_agent_guidance.md  task5b_followup_offset_centering.md  within_batch_regularizer_handoff.md
configs/: donor_split.json  exp2.yaml  exp3.yaml  gene_vocab_4000.tsv  heldout_genes.json  poc.yaml
literature_validation/: paperclip_tf_tcr_evidence.csv  paperclip_tf_tcr_evidence_v2.csv  paperclip_tf_tcr_validation.csv  paperclip_tf_tcr_validation.md  paperclip_tf_tcr_validation_v2.csv  paperclip_tf_tcr_validation_v2.md
scripts/: build_grn.py  check_sigreg.py  eval_annotation.py  eval_perturbation.py  exp2_gene_umap.py  exp2_mlp_probe.py  exp2_tf_deg_csls.py  exp2_tf_deg_enrichment.py  exp4_armA_collapse_diagnostic.py  exp4_armA_gene_meanpool_eval.py  exp4_armA_pc_axis_diagnostic.py  exp4_representation_checks.py  make_figures.py  plot_training_curves_compare.py  prep_data.py  run_annotation_eval.sh  run_eval_chain.sh  run_exp2_downstream.sh  run_exp2_eval_earlystop.sh  run_perturb_eval.sh  task5_exp4_armA.py  train_exp3.py  train_jepa.py  write_exp2_report.py
src/jepa_poc/: __init__.py  config.py
src/jepa_poc/baselines/: __init__.py  (+3 more)
tests/: conftest.py  test_ema.py  test_loss.py  test_masking.py  test_overfit.py
(+20 files in other folders)
